--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url(./Layouts/_navbar.scss);
 :root {
   --header-height: 3rem;
   /* ==============COLOR=========== */
@@ -61,49 +60,104 @@ body {
   font-family: var(--body-font);
   font-size: var(--normal-font-size); }
 
-
-  /* HEADER __ NAVBAR */
-
-  /* HEADER LOGO */
-
-.header__logo-box{
-  position: relative;
-  padding-top: auto;
-  padding-left: auto;
-  display: inline;
-  left: 5rem;
-}
-.header__logo-box img{
-  height: 5rem;
-  width: 15rem;
-}
-
-  /* HEADER LOGO */
-
-.clearfix
-.clearfix::after
-.clearfix::before{
-  content: "";
-  clear: both;
-  display: table;
-}
-
-/* HEADER MENU */
-.header__navbar{
+.header__navbar-ul {
   float: right;
-}
-.header__navbar-ul{
-  list-style-type: none;
-}
-.header__navbar-ul li{
-  position: relative;
-  display: inline-table;
-  right: 200px;
-  border-left: 2px solid black;
-}
-.header__navbar-li a{
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 2rem;
+  list-style-type: none; }
 
-}
+.header__navbar-li {
+  padding: 30px;
+  display: inline-block;
+  position: relative; }
+  .header__navbar-li .header__navbar-link {
+    font-size: 2rem;
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase; }
+
+.clearfix,
+.clearfix::after,
+.clearfix::before {
+  content: "";
+  display: table;
+  clear: both; }
+
+.heading-primary {
+  position: relative;
+  float: right;
+  right: 20rem;
+  top: 15rem; }
+  .heading-primary--main .heading-text-main {
+    text-transform: uppercase;
+    font-size: 3rem;
+    display: inline-block;
+    background-image: linear-gradient(to left, rgba(10, 21, 173, 0.8), rgba(1, 11, 1, 0.8));
+    color: transparent;
+    -webkit-background-clip: text;
+    animation-name: moveInLeft; }
+  .heading-primary--sub .heading-text-sub {
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    display: inline-block;
+    background-image: linear-gradient(to right, rgba(10, 21, 173, 0.8), rgba(1, 11, 1, 0.8));
+    animation-name: moveInRight; }
+
+.chars {
+  float: left; }
+  .chars-text-h {
+    font-size: 35rem;
+    margin-top: -15rem;
+    margin-left: 17rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-transform: uppercase;
+    background-image: linear-gradient(to right, #3a4090, #010b01), url(../Themes/background1.jpg);
+    color: transparent;
+    -webkit-background-clip: text;
+    z-index: 10; }
+  .chars-text-q {
+    font-size: 40rem;
+    margin-top: -50rem;
+    margin-left: 30rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-transform: uppercase;
+    background-image: linear-gradient(to left, #0a15ad, #010b01), url(../Themes/background1.jpg);
+    color: transparent;
+    -webkit-background-clip: text;
+    z-index: 9; }
+
+header {
+  height: 90vh;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  background-image: linear-gradient(rgba(240, 217, 126, 0.5), rgba(238, 162, 241, 0.5)), url(../Themes/background1.jpg); }
+
+.header__logo-box {
+  float: left; }
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  80% {
+    transform: translateX(1rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem); }
+  80% {
+    transform: translateX(-1rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
