--- a/sass/Layouts/_navbar.scss
+++ b/sass/Layouts/_navbar.scss
@@ -1,18 +1,18 @@
-.header__logo-box{
-  position: relative;
-  height: 20rem;
-  width: 2rem;
-  left: 10rem;
-}
 .header__navbar{
-  float: right;
-  .header__navbar-ul{
+  &-ul{
+    float: right;
     list-style-type: none;
-    .header__navbar-li{
-        .header__navbar-link{
-            text-decoration: none;
-            text-transform: uppercase;
-      }
-    }
+  }
+  &-li{
+    padding: 30px;
+    display: inline-block;
+    position: relative;
+    .header__navbar-link{
+    font-size: 2rem;
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
   }
 }
+
