--- a/sass/Layouts/_header.scss
+++ b/sass/Layouts/_header.scss
@@ -1,11 +1,11 @@
 header{
-    height: 90vh;
+    height: 100vh;
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
     background-image: linear-gradient(rgba(240, 217, 126, 0.5), 
-      rgba(238, 162, 241, 0.5)), 
-      url(../Themes/background1.jpg);
+      rgba(12, 66, 153, 0.5));
+    // background-color: darkgray;
   }
   .header__logo-box{
     float: left;
