--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,8 @@
 @import './base/base';
 @import './Base/typography';
 @import './Layouts/navbar';
-@import './Abstracts/clearfix.scss';
-@import './Layouts/heading.scss';
+@import './Abstracts/clearfix';
+@import './Layouts/heading';
 @import './Layouts/header';
 @import './Base/animations';
+@import './Layouts/grid'
