--- a/sass/Base/_typography.scss
+++ b/sass/Base/_typography.scss
@@ -1,7 +1,6 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: var(--body-font);
-    font-size: var(--normal-font-size);
-    
+    font-family: $body-font;
+    font-size: $normal-font-size;
 }
