--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,4 +6,5 @@
 @import './Layouts/heading';
 @import './Layouts/header';
 @import './Base/animations';
-@import './Layouts/grid'
+@import './Layouts/grid';
+@import './Layouts/section'
