--- a/sass/Layouts/_grid.scss
+++ b/sass/Layouts/_grid.scss
@@ -15,18 +15,32 @@
     margin: 0 auto;
     background-color: black;
 
+
+}
     .col-1-of-2{
     width: calc((100% - #{$grutter-horizontal}) / 2);
-
-}
-.col-1-of-3{
-    width: calc((100% - 2*#{$grutter-horizontal}) / 3);
-}
-.col-1-of-4{
-    width: calc((100% - 3*#{$grutter-horizontal}) / 4);
-}
-.col-2-of-4{
-    width: calc(2*((100% - 3*#{$grutter-horizontal}) / 4) + #{$grutter-horizontal};
-}
-}
-
+    }
+    .col-1-of-3{
+        width: calc((100% - 2*#{$grutter-horizontal}) / 3);
+    }
+    .col-1-of-4{
+        width: calc((100% - 3*#{$grutter-horizontal}) / 4);
+    }
+    .col-2-of-4{
+        width: calc(2*((100% - 3*#{$grutter-horizontal}) / 4) + #{$grutter-horizontal});
+    }
+    .col-2-of-5{
+        width: calc(2*((100% - 4*#{$grutter-horizontal}) / 5) + #{$grutter-horizontal});
+    }
+    .col-3-of-5{
+        width: calc(3*((100% - 4*#{$grutter-horizontal}) / 5) + 2 * #{$grutter-horizontal});
+    }
+    .col-1-of-6{
+        width: calc((100% - 5 * #{$grutter-horizontal}) / 6);
+    }
+    .col-2-of-6{
+        width: calc(2 *((100% - 5 * #{$grutter-horizontal}) / 6) + #{$grutter-horizontal});
+    }
+    .col-3-of-6{
+        width: calc(3 *((100% - 5 * #{$grutter-horizontal}) / 6) + 2 * #{$grutter-horizontal} );
+    }
